# patient-service/nats_routes.go
@@ -1,13 +1,0 @@
-package main
-
-//// Supported NATS context
-//const (
-//	PatientImageService =     `post./appName/v1/patient/images/list`
-//	UploadPatientImage  =     `post./appName/v1/patient/image/upload`
-//	DeletePatientImage  =
-//  GetPatientImage     =
-// RetrieveImagesByTag  =
-// UpdatePatientImageTags =
-//)
-
-//COMMENT: ABOVE HANDLERS CAN BE REGISTERED AND BE USED BY OTHER SERVICES VIA NATS CALL
